[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "specllm"
version = "0.1.0"
description = "The production framework for spec-first LLM APIs"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "specllm contributors"}
]
keywords = ["llm", "openapi", "api", "schema", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/prj1991/specllm"

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]

[tool.setuptools.packages.find]
include = ["specllm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
